--- a/partials/portfolio.html
+++ b/partials/portfolio.html
@@ -3,37 +3,37 @@
     <section class="portfolio">
         <div class="portfolio-card">
             <figure>
-                <img src="img/y2kcover.jpg" alt="Y2K Project">
+                <img src="./img/y2kcover.jpg" alt="Y2K Project">
                 <figcaption>Y2K Project</figcaption>
             </figure>
         </div>
         <div class="portfolio-card">
             <figure>
-                <img src="img/tsabinz.jpg" alt="TSabinz Project">
+                <img src="./img/tsabinz.jpg" alt="TSabinz Project">
                 <figcaption>TSabinz</figcaption>
             </figure>
         </div>
         <div class="portfolio-card">
             <figure>
-                <img src="img/Tikidata.jpg" alt="Tikidata Project">
+                <img src="./img/Tikidata.jpg" alt="Tikidata Project">
                 <figcaption>Tikidata</figcaption>
             </figure>
         </div>
         <div class="portfolio-card">
             <figure>
-                <img src="img/grass-gurus-cover.jpg" alt="Grass Gurus">
+                <img src="./img/grass-gurus-cover.jpg" alt="Grass Gurus">
                 <figcaption>Grass Gurus</figcaption>
             </figure>
         </div>
         <div class="portfolio-card">
             <figure>
-                <img src="img/okami-dojo-cover.jpg" alt="Okami Dojo">
+                <img src="./img/okami-dojo-cover.jpg" alt="Okami Dojo">
                 <figcaption>Okami Dojo</figcaption>
             </figure>
         </div>
         <div class="portfolio-card">
             <figure>
-                <img src="img/dh-fiber-cover.jpg" alt="DH Fiber">
+                <img src="./img/dh-fiber-cover.jpg" alt="DH Fiber">
                 <figcaption>DH Fiber</figcaption>
             </figure>
         </div>
